# ALD

./: ALDCodeCriticStuff.sln  README.md
ALDCodeCriticStuff/: Program.cs  README.md
ALDCodeCriticStuff/CviceniStuff/: AlgorithmsOs.cs
ALDCodeCriticStuff/SemestralWork/: README.md  main.asm  makefile
ALDCodeCriticStuff/SemestralWork/LabyrinthGenerator/: CMakeLists.txt  main.asm
ALDCodeCriticStuff/SemestralWork/LabyrinthGenerator/data/: grid.asm  tiles.asm
ALDCodeCriticStuff/SemestralWork/LabyrinthGenerator/tools/: general_functions.asm  general_tools.asm  memory_functions.asm  memory_tools.asm
ALDCodeCriticStuff/SemestralWork/LabyrinthGenerator/user_interface/: interface_tools.asm  print_functions.asm  print_tools.asm  tile_data.asm
ALDCodeCriticStuff/SemestralWork/tools/: general_tools.asm  memory_tools.asm
ALDCodeCriticStuff/SemestralWork/view/: tile_data.asm
ALDCodeCriticStuff/Solutions/: ClockTo7SegmentNumber.cs  Gps.cs  HelloWorld.cs  HratkySFifo.cs  HratkySLifo.cs  Palindrome.cs  PalindromeNumber.cs  ReadNumberSequence.cs  Regex.cs  UniqueNumbers.cs  WordCount.cs
ALDCodeCriticStuff/Solutions/ClockStuff/: AnalogClock.cs  SegmentNumber.cs  Type1.cs  Type2.cs  Type3.cs
ALDCodeCriticStuff/Solutions/GPSStuff/: CityData.cs  DijkstrasSolver.cs  Vertex.cs
ALDCodeCriticStuff/Solutions/LIFOFIFO/: Fifo.cs  Item.cs  Lifo.cs
ALDCodeCriticStuff/Solutions/RegexStuff/: Student.cs
ALDCodeCriticStuff/Solutions/UniqueNumbersTools/: Occurence.cs  Value.cs
ALDCodeCriticStuff/Solutions/WordCounterStuff/: Word.cs
ALDCodeCriticStuff/Tests/: clockTest1.txt
ALDStuff/: ALDCodeCriticStuff.csproj
ALDStuff/SemestralWorkOld/LabyrinthGenerator/: main.asm
ALDStuff/SemestralWorkOld/LabyrinthGenerator/tools/: general_functions.asm
ALDStuff/Solutions/: ClockTo7SegmentNumber.cs  UniqueNumbers.cs
ALDStuff/Solutions/ClockStuff/: PoweredState.cs
ALDStuff/Solutions/GPSStuff/: DijkstrasSolver.cs
ALDStuff/Solutions/LIFOFIFO/: Item.cs
TGHStuff/: Program.cs
TGHStuff/PROBLEM_Idos/: CMakeLists.txt  main.c
TGHStuff/PROBLEM_Idos/data/: Connection.h  IdosData.h  LinkedList.h  Macros.h  Node.h  PathNode.h
TGHStuff/PROBLEM_Idos/src/: main.c
TGHStuff/PROBLEM_Idos/src/connectionMatrix/include/: addConnection.h  connection.h  createNewTreeNode.h  initConnectionMatrix.h  treeNode.h
TGHStuff/PROBLEM_Idos/src/connectionMatrix/libs/: addConnection.c  createNewTreeNode.c  initConnectionMatrix.c
TGHStuff/PROBLEM_Idos/src/mainApp/include/: idosData.h  loadInitialData.h  macros.h
TGHStuff/PROBLEM_Idos/src/mainApp/libs/: loadInitialData.c
TGHStuff/PROBLEM_Idos/tests/: runTests.c  runTests.h
TGHStuff/PROBLEM_Idos/tests/include/: test_loadInitialData.h
TGHStuff/PROBLEM_Idos/tests/libs/: test_loadInitialData.c
TGHStuff/PROBLEM_Idos/tools/: initConnectionMatrix.c  initMatrix.c  loadData.c  loadInitialData.c  populateConnectionMatrix.c
TGHStuff/PROBLEM_Idos/tools/functions/: loadAndProcess_Requests.c  loadInitialData.c  processInputLine.c
TGHStuff/PROBLEM_Idos/tools/functions/connectionMatrix/: addConnection.c  createNode.c  initConnectionMatrix.c  matrixVisualizer.c  populateConnectionMatrix.c
TGHStuff/PROBLEM_Idos/tools/functions/dijkstraSolver/: findShortestPath.c  getMinDistance.c  updateDistanceValOfAdjacentVertices.c
TGHStuff/PROBLEM_Idos/tools/headers/: initConnectionMatrix.h  initMatrix.h  loadAndProcess_Requests.h  loadData.h  loadInitialData.h  populateConnectionMatrix.h  processInputLine.h
TGHStuff/PROBLEM_Idos/tools/headers/connectionMatrix/: addConnection.h  createNode.h  initConnectionMatrix.h  matrixVisualizer.h  populateConnectionMatrix.h
TGHStuff/PROBLEM_Idos/tools/headers/dijkstraSolver/: findShortestPath.h  getMinDistance.h  updateDistanceValOfAdjacentVertices.h
TGHStuff/Solutions/: Transpose.cs
TGHStuff/TranspoziceGrafu/: CMakeLists.txt  main.c
TGHStuff/TranspoziceGrafu/matrix_tools/: loadMatrix_FromInput.c  printMatrix_InPlainFormat.c  printMatrix_VertexConnections.c  transposeMatrix.c
TGHStuff/TranspoziceGrafu/matrix_tools/headerFiles/: loadMatrix_FromInput.h  printMatrix_InPlainFormat.h  printMatrix_VertexConnections.h  transposeMatrix.h
